--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
 </div>
 </div>
 
+      <div class="feat_cont">
+  <div class="product-container">
+    <div class="product-image">
+        <img src="" alt="image" />
+    </div>
+    <h3 class="product-name">iPhone </h3>
+    <p class="product-discription" > used phones
+    </p>
+
+    <button><a href="https://drive.google.com/file/d/1XHJGRBvvUrRQwZr7MWr3Fk3cp-FF3bEe/view?usp=sharing">Click to Play</a></button>
+</div>
+</div>
+
   
   </div>
   <!-- FOOOTER -->
