--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <div class="product-image">
         <img src="" alt="image" />
     </div>
-    <h3 class="product-name">iPhone </h3>
-    <p class="product-discription" > used phones
+    <h3 class="product-name">VIDEO </h3>
+    <p class="product-discription" >Click the button bellow to play the video
     </p>
 
     <button><a href="https://drive.google.com/file/d/1XHJGRBvvUrRQwZr7MWr3Fk3cp-FF3bEe/view?usp=sharing">Click to Play</a></button>
